Added babel support

--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-    "template": "darkknight"
+    "template": "darkknight",
+    "cvfile": "cv.json",
+    "saveHTML": true,
+    "saveImage": false,
+    "savePDF": true
 }
