--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "handlebars": "^4.0.11",
+    "html-docx-js": "^0.3.1",
     "moment": "^2.20.1",
     "puppeteer": "^1.0.0"
   },
